--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
         <section class="container text-center my-5">
             <h1 class="center">Flip a Coin</h1>
-            <p class="text">Flip the coin online, its as real and unbais as original coin</p>
+            <p class="text">Flip the coin online, its as real and unbais as the original coin</p>
             <div class="coin mb-5">
                 <audio src="./assets/coin-flip.mp3" id="flipSound"></audio>
                 <div class="coin_front coin_sides" id="front_coin">
